<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="feed">Лента</string>
    <string name="projects">Проекты</string>
    <string name="training">Обучение</string>
    <string name="profile">Профиль</string>
    <string name="personal_data">Личные данные</string>
    <string name="change_photo">Изменить фотографию</string>
    <string name="phone_number">Номер телефона</string>
    <string name="full_name">ФИО</string>
    <string name="email">Email</string>
    <string name="job_title">Должность</string>
    <string name="company_name">Имя компании</string>
    <string name="link_to_web_site">Ссылка на сайт компании</string>
    <string name="about_me">Обо мне</string>
    <string name="save">Сохранить</string>
    <string name="exit">Выход</string>
    <string name="delete_account">Удалить аккаунт?</string>
    <string name="cancellation">Отмена</string>
    <string name="go_out">Выйти</string>
    <string name="delete">Удалить</string>
</resources>