<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/background_secondary"

    app:cardCornerRadius="@dimen/corner_radius_16"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_3"
        android:paddingHorizontal="@dimen/text_size_16"
        android:paddingVertical="@dimen/padding_16"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/geologica"
            android:gravity="center"
            android:text="@string/delete_account"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_size_16" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_8"
            android:textSize="14dp"
            android:textColor="@color/text_primary"
            android:text="@string/all_your_data_will_be_deleted"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="19dp"
            android:orientation="horizontal">

            <com.innoprog.android.uikit.InnoProgButtonView
                android:id="@+id/buttonCancel"
                android:layout_width="115dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_8"
                app:buttonSize="medium"
                app:buttonState="enabled"
                app:buttonText="@string/cancellation"
                app:buttonType="def"/>

            <com.innoprog.android.uikit.InnoProgButtonView
                android:id="@+id/buttonDelete"
                android:layout_width="115dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                app:buttonSize="medium"
                app:buttonState="enabled"
                app:buttonText="@string/delete"
                app:buttonType="primary" />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>